<?xml version="1.0"?>
<package>
  <name>image_undistort</name>
  <version>0.0.0</version>

  <description>
    This is a LiDAR Odometry
  </description>

  <maintainer email="1453231310@qq.com">claydergc</maintainer>

  <license>BSD</license>

  <author email="1453231310@qq.com">Xiaoteng Yang</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>rosbag</build_depend>

  <run_depend>sensor_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>rosbag</run_depend>


  <export>
  </export>
</package>
